--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="canvas1"></canvas>
+    <canvas id="canvas1">
+    </canvas>
+
+    
+
 
     <script src="script.js"></script>
 </body>
